# t-ron

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPS-PATTERN.md  LICENSE  Makefile  README.md  SECURITY.md  bench-history.csv  cyrius.cyml  cyrius.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: history.csv  pipeline.rs
docs/: benchmarks-rust-v-cyrius.md  doc-health.md  sources.md
docs/architecture/: adr-001-dual-audit.md  adr-002-default-deny.md  adr-003-bote-middleware.md  adr-004-cyrius-port.md  adr-005-chacha20-ed25519-aead.md  adr-006-safety-submodule.md  overview.md
docs/audit/: 2026-04-14.md
docs/development/: roadmap.md  threat-model.md
docs/examples/: 01-minimal-gate.cyr  02-signed-policy.cyr  03-audit-export.cyr  04-safety-check.cyr  README.md
docs/guides/: integration.md  testing.md
lib/: alloc.cyr  assert.cyr  async.cyr  audio.cyr  base64.cyr  bench.cyr  bote_audit.cyr  bote_codec.cyr  bote_dispatch.cyr  bote_error.cyr  bote_events.cyr  bote_jsonx.cyr  bote_protocol.cyr  bote_registry.cyr  bote_schema.cyr  bounds.cyr  callback.cyr  cffi.cyr  chain.cyr  counter.cyr  csv.cyr  dynlib.cyr  entry.cyr  envelope.cyr  error.cyr  export.cyr  fmt.cyr  fnptr.cyr  fs.cyr  hasher.cyr  hashmap.cyr  hashmap_fast.cyr  http.cyr  http_server.cyr  io.cyr  libro_chain.cyr  libro_entry.cyr  libro_error.cyr  libro_export.cyr  libro_hasher.cyr  (+40 more)
rust-old/: Cargo.toml  Makefile
rust-old/benches/: history.csv  pipeline.rs
rust-old/src/: error.rs  gate.rs  lib.rs  pattern.rs  policy.rs  scanner.rs  score.rs  signal.rs  tools.rs
rust-old/src/safety/: guardrails.rs  policy.rs
scripts/: bench-history.sh  version-bump.sh
src/: _libro_compat.cyr  audit.cyr  audit.rs  correlation.cyr  correlation.rs  crypto_chacha20.cyr  error.cyr  error.rs  gate.cyr  gate.rs  lib.rs  llm_scan.cyr  llm_scan.rs  main.cyr  middleware.cyr  middleware.rs  pattern.cyr  pattern.rs  policy.cyr  policy.rs  query.cyr  query.rs  rate.cyr  rate.rs  safety.cyr  scanner.cyr  scanner.rs  score.cyr  score.rs  signal.cyr  signing.cyr  signing.rs  tools.cyr  tools.rs  tron.cyr
src/safety/: guardrails.rs  injection.rs  mod.rs  policy.rs  tests.rs  types.rs
tests/: t-ron-crypto.tcyr  t-ron-safety.tcyr  t-ron.bcyr  t-ron.fcyr  t-ron.tcyr
