[package]
name = "t-ron"
version = "0.26.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "MCP security monitor — tool call auditing, rate limiting, injection detection, and anomaly analysis"
homepage = "https://github.com/MacCracken/t-ron"
repository = "https://github.com/MacCracken/t-ron"
readme = "README.md"
documentation = "https://docs.rs/t-ron"
keywords = ["mcp", "security", "audit", "firewall", "agent"]
categories = ["authentication", "web-programming"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
regex = "1"
bote = { version = "0.90", path = "../bote" }
libro = "0.22.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt-multi-thread"] }

[[bench]]
name = "pipeline"
harness = false
