[package]
name = "t-ron"
version = "0.90.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "MCP security monitor — tool call auditing, rate limiting, injection detection, and anomaly analysis"
homepage = "https://github.com/MacCracken/t-ron"
repository = "https://github.com/MacCracken/t-ron"
readme = "README.md"
documentation = "https://docs.rs/t-ron"
keywords = ["mcp", "security", "audit", "firewall", "agent"]
categories = ["authentication", "web-programming"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
signal = ["tokio/signal"]
signing = ["dep:sigil", "dep:ed25519-dalek"]
export = ["dep:chacha20poly1305"]
llm = ["dep:hoosh"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
regex = "1"
bote = "0.90"
libro = "0.25"
sigil = { version = "1", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
hoosh = { version = "1.1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt-multi-thread"] }

[[bench]]
name = "pipeline"
harness = false
